Keep plugin loadable on Java 8
Build ImageJAI classes for Fiji's bundled Zulu 8 and lazy-load the embedded terminal backend only on Java 11+. Fall back to an external terminal when the embedded backend is unavailable.